# cel8-samples

./: .gitignore  CMakeLists.txt  README.md  astro.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
cmake/: cel8.cmake  sokol.cmake
libs/cel8/: update.sh
samples/: CMakeLists.txt  clock.c  clock.html  clock.js  crosshair.c  crosshair.html  crosshair.js  font.c  font.html  font.js  glitch.c  glitch.html  glitch.js  hello.c  hello.html  hello.js  palette.c  palette.html  palette.js  platform-sokol.c  snake.c  snake.html  snake.js  sprite.c  sprite.html  sprite.js  tetris.c  tetris.html  tetris.js
samples/clock/: index.html
samples/crosshair/: index.html
samples/embed/: palette.h
samples/font/: index.html
samples/glitch/: index.html
samples/hello/: index.html
samples/palette/: index.html
samples/snake/: index.html
samples/sprite/: index.html
samples/tetris/: index.html
website/src/: consts.ts
website/src/components/: Meta.astro
website/src/content/: config.ts
website/src/content/assignments/: assignment2.md
website/src/content/samples/: clock.md  crosshair.md  font.md  glitch.md  hello.md  palette.md  snake.md  sprite.md  tetris.md
website/src/pages/: index.astro
website/src/pages/samples/: [slug].astro
